<resources>
    <string name="app_name">ComprasNet</string>

    /** OnBoarding **/
    <string name="button_start">VAMOS LÁ</string>
    <string name="text_onboarding1">Navegue pelos contratos</string>
    <string name="text_onboarding2">Filtre os contratos desejados</string>
    <string name="text_onboarding3">Localize os órgãos responsáveis</string>

    /** Barra de Navegação **/
    <string name="button_home">Home</string>
    <string name="button_graphs">Gráficos</string>
    <string name="button_map">Mapa</string>
    <string name="button_more">Mais</string>
    <string name="button_account">Minha Conta</string>

    /** Tela Home **/
    <string name="Home">Transparência</string>
    <string name="field_pesquisar">Pesquisar</string>
    <string name="button_total_contratos">Total Contratos</string>
    <string name="button_vencem_menos30">Vencem (- 30 dias)</string>
    <string name="button_vencem_30a60">Vencem (30 a 60 dias)</string>
    <string name="button_vencem_60a90">Vencem (60 a 90 dias)</string>
    <string name="button_vencem_90a180">Vencem (90 a 180 dias)</string>
    <string name="button_vencem_mais180">Vencem (+ 180 dias)</string>

    /** Tela Resultados **/
    <string name="title_results">Resultados</string>
    <string name="field_ver">Ver</string>
    <string name="field_favoritar">Favoritar</string>

    /** Tela Detalhes **/
    <string name="title_details">Detalhes</string>

    /** Tela Alt **/
    <string name="title_alt">Alt</string>
    <string name="button_api">Request API</string>
    <string name="button_offline">JSON Local</string>

    /** Tela Filtros **/
    <string name="title_filtro_de_pesquisa">Filtro de Pesquisa</string>
    <string name="field_orgao">Orgão</string>
    <string name="field_unidade_gestora">Unidade Gestora</string>
    <string name="field_fornecedor">Fornecedor</string>
    <string name="field_contrato">Contrato</string>
    <string name="button_filtrar">Filtrar</string>
    <string name="button_back">Voltar</string>

    /** Tela Minha Conta - Login **/
    <string name="title_minha_conta">Minha conta</string>
    <string name="field_email">Email</string>
    <string name="field_password">Senha</string>
    <string name="button_login">Login</string>
    <string name="link_forgot">Esqueceu a senha?</string>
    <string name="link_signup">Ainda não tem login? Cadastre-se</string>

    /** Tela Minha Conta - Logado **/
    <string name="field_user">Usuário: </string>
    <string name="field_email_my_account">Email: </string>
    <string name="button_change_password">Mudar Senha</string>
    <string name="button_exit">Sair</string>
    <string name="link_delete_account">Apagar conta</string>

    /** Tela Minha Conta - Alterar senha **/
    <string name="field_alteracao_de_senha">Alteração de senha</string>
    <string name="field_actual_password">Digite sua senha atual</string>
    <string name="field_first_password">Digite a nova senha</string>
    <string name="field_second_password">Confirme a nova senha</string>
    <string name="button_change">Alterar</string>
    <string name="field_change_success">Sua senha foi alterada com sucesso!</string>
    <string name="field_change_failure">Houve um erro, sua senha não foi alterada.</string>

    /** Tela Minha Conta - Esqueci a senha **/
    <string name="title_esqueci_senha">Alteração de senha</string>
    <string name="field_type_email">Digite seu email</string>
    <string name="button_send_email">Enviar email</string>
    <string name="field_forgot_success">Um email de recuperação foi enviado a sua caixa de entrada</string>
    <string name="field_forgot_failure">Houve um erro, não foi possível enviar email de recuperação de senha</string>

    /** Tela Minha Conta - Cadastro **/
    <string name="title_signup">Cadastro</string>
    <string name="field_type_name">Digite seu nome completo</string>
    <string name="field_type_password">Digite a senha</string>
    <string name="field_type_password_repeat">Confirme a senha</string>
    <string name="button_signup">Cadastrar</string>
    <string name="field_signup_success">Um email de confirmação foi enviado a sua caixa de entrada</string>
    <string name="field_signup_failure">Houve um erro, não foi possível criar sua conta</string>

    /** Tela Mapas **/
    <string name="title_maps">Mapa</string>

    /** Tela Mais opções **/
    <string name="title_more">Mais opções</string>
    <string name="link_favoritos">Favoritos</string>
    <string name="link_vistos">Vistos</string>
    <string name="link_ajuda">Ajuda</string>

    /** Tela Chatbot **/
    <string name="field_type_message">Digite sua mensagem…</string>
    <string name="field_bot">ComprasNet BOT</string>
    <string name="field_enviada">Oi</string>
    <string name="field_recebida">Olá! Em que posso ajudar?</string>

</resources>