<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.siasg.comprasnet.ui.fragment.main.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.siasg.comprasnet.ui.fragment.login.LoginFragment"
        android:label="@string/title_minha_conta"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_myAccountFragment"
            app:destination="@id/myAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.siasg.comprasnet.ui.fragment.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.siasg.comprasnet.ui.fragment.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.siasg.comprasnet.ui.fragment.login.ForgotPasswordFragment"
        android:label="ForgotPasswordFragment" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.siasg.comprasnet.ui.fragment.login.SignUpFragment"
        android:label="SignUpFragment" />
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="com.siasg.comprasnet.ui.fragment.login.MyAccountFragment"
        android:label="fragment_my_account"
        tools:layout="@layout/fragment_my_account" />
</navigation>